--- a/part03/course/backend/package.json
+++ b/part03/course/backend/package.json
@@ -10,7 +10,8 @@
     "build:ui": "rm -rf build && cd ../frontend/ && npm run build && cp -r build ../backend",
     "deploy": "flyctl deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
-    "logs:prod": "flyctl logs"
+    "logs:prod": "flyctl logs",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
