--- a/part-08-graphql/course-react-and-graphql/backend/package.json
+++ b/part-08-graphql/course-react-and-graphql/backend/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.4.0",
-    "graphql": "^16.6.0"
+    "graphql": "^16.6.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.7.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
