--- a/part-08-graphql/course-react-and-graphql/backend/package.json
+++ b/part-08-graphql/course-react-and-graphql/backend/package.json
@@ -12,9 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.4.0",
+    "@graphql-tools/schema": "^10.0.7",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
     "graphql": "^16.6.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.16.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.2"
+    "mongoose": "^8.7.2",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
