--- a/part-08-graphql/course-react-and-graphql/backend/package.json
+++ b/part-08-graphql/course-react-and-graphql/backend/package.json
@@ -14,6 +14,7 @@
     "@apollo/server": "^4.4.0",
     "@graphql-tools/schema": "^10.0.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
