--- a/part-08-graphql/course-react-and-graphql/backend/package.json
+++ b/part-08-graphql/course-react-and-graphql/backend/package.json
@@ -2,11 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +25,12 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^22.10.1",
+    "@types/ws": "^8.5.13",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   }
 }
