--- a/part-08-graphql/course-react-and-graphql/backend/tsconfig.json
+++ b/part-08-graphql/course-react-and-graphql/backend/tsconfig.json
@@ -1,20 +1,13 @@
 {
-  "ts-node": {
-    "compilerOptions": {
-      // compilerOptions specified here will override those declared below,
-      // but *only* in ts-node.  Useful if you want ts-node and tsc to use
-      // different options with a single tsconfig.json.
-      "module": "commonjs"
-    }
-  },
   "compilerOptions": {
     "rootDirs": ["src"],
     "outDir": "dist",
     "lib": ["es2020"],
     "target": "es2020",
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "types": ["node"]
-  }
+  },
+  "exclude": ["node_modules", "dist", "tests"]
 }
